--- a/LibraryManagement/Views/Login/Index.cshtml
+++ b/LibraryManagement/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibraryManagement.Models.LoginModel;
+﻿@model LibraryManagement.Models.LoginModel
 
 @{
     Layout = null;
@@ -21,19 +21,15 @@
 
         #login .container #login-row #login-column #login-box {
             margin-top: 120px;
-            max-width: 400px;
-            height: 350px;
+            max-width: 450px;
+            height: 400px;
             border: 1px solid #9C9C9C;
             background-color: #EAEAEA;
         }
 
-            #login .container #login-row #login-column #login-box #login-form {
-                padding: 20px;
-            }
-
-                #login .container #login-row #login-column #login-box #login-form #register-link {
-                    margin-top: -85px;
-                }
+        #login .container #login-row #login-column #login-box #login-form {
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
@@ -43,23 +39,40 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
+                        @if (TempData["Success"] != null)
+                        {
+                                <div class="alert alert-success">@TempData["Success"]</div>
+                        }
+
                         @using (Html.BeginForm("Verify", "Login", FormMethod.Post))
                         {
-                            <h3 class="text-center text-info">Admin Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                @Html.TextBoxFor(m => m.username, new { @class = "form-control", @placeholder = "Email", @required = true })
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
+                                <h3 class="text-center text-info">Library Management Login</h3>
+                                <div class="form-group">
+                                    <label for="username" class="text-info">Username:</label><br>
+                                @Html.TextBoxFor(m => m.username, new { @class = "form-control", @placeholder = "Username", @required = true })
+                                @Html.ValidationMessageFor(m => m.username, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="text-info">Password:</label><br>
                                 @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password", @required = true })
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="Submit" name="Submit" class="btn btn-info btn-md" value="Submit">
-                            </div>
+                                @Html.ValidationMessageFor(m => m.password, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <input type="Submit" name="Submit" class="btn btn-info btn-md w-100" value="Login">
+                                </div>
                         }
                         <div style="color:red;">@ViewBag.message</div>
+
+                        <hr>
+                        <div class="text-center">
+                            <p class="text-info">Don't have an account?</p>
+                            <a href="/Register" class="btn btn-outline-primary">Register as Student</a>
+                            <a href="/Register" class="btn btn-outline-success">Register as Librarian</a>
+                        </div>
+
+                        <div class="mt-3">
+                            <small class="text-muted">Test Admin: admin/123</small>
+                        </div>
                     </div>
                 </div>
             </div>
